Added Solution of Assignment 8: Fancy Indexing and Boolean Indexing

--- a/numpypandasassignments/numpyassignments.ipynb
+++ b/numpypandasassignments/numpyassignments.ipynb
@@ -85,11 +85,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 4 10  8  6  7]\n",
-      " [ 3  1 16 14 10]\n",
-      " [ 4 13  2 11  3]\n",
-      " [ 6  6  3  5  5]\n",
-      " [13 11  8  6 17]]\n"
+      "[[ 4 12  7  7  5]\n",
+      " [ 6 13  5 18  7]\n",
+      " [ 9 20  2 17 14]\n",
+      " [18 15  3 13 17]\n",
+      " [ 5  7  3 19  6]]\n"
      ]
     }
    ],
@@ -109,11 +109,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 4 10  1  6  7]\n",
-      " [ 3  1  1 14 10]\n",
-      " [ 4 13  1 11  3]\n",
-      " [ 6  6  1  5  5]\n",
-      " [13 11  1  6 17]]\n"
+      "[[ 4 12  1  7  5]\n",
+      " [ 6 13  1 18  7]\n",
+      " [ 9 20  1 17 14]\n",
+      " [18 15  1 13 17]\n",
+      " [ 5  7  1 19  6]]\n"
      ]
     }
    ],
@@ -130,10 +130,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 5,  3,  1, 11],\n",
-       "       [ 4, 14,  8, 11],\n",
-       "       [12,  2, 12, 13],\n",
-       "       [12, 11,  3,  3]])"
+       "array([[12, 12, 10,  4],\n",
+       "       [ 3,  9, 15,  2],\n",
+       "       [12, 14, 15,  6],\n",
+       "       [14, 12,  8,  3]])"
       ]
      },
      "execution_count": 4,
@@ -155,10 +155,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0,  3,  1, 11],\n",
-       "       [ 4,  0,  8, 11],\n",
-       "       [12,  2,  0, 13],\n",
-       "       [12, 11,  3,  0]])"
+       "array([[ 0, 12, 10,  4],\n",
+       "       [ 3,  0, 15,  2],\n",
+       "       [12, 14,  0,  6],\n",
+       "       [14, 12,  8,  0]])"
       ]
      },
      "execution_count": 5,
@@ -227,12 +227,12 @@
      "text": [
       "5, 5 array \n",
       "\n",
-      " [[96 95  5  2 39]\n",
-      " [ 5 78 90  9 25]\n",
-      " [29 97 52 38  9]\n",
-      " [59 49 29 94 78]\n",
-      " [ 7 56 97 41 74]]\n",
-      "[96 95  5  2 39 25  9 78 74 41 97 56  7 59 29  5]\n"
+      " [[ 2 77 78 42  3]\n",
+      " [61 93 37 42 62]\n",
+      " [ 5 81 60 41 95]\n",
+      " [11 51 44 40 47]\n",
+      " [61 66 17 71 26]]\n",
+      "[ 2 77 78 42  3 62 95 47 26 71 17 66 61 11  5 61]\n"
      ]
     }
    ],
@@ -266,13 +266,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2 2 6 5]\n",
-      " [2 7 2 8]\n",
-      " [3 9 2 3]] \n",
+      "[[4 9 6 7]\n",
+      " [3 9 3 8]\n",
+      " [9 7 4 9]] \n",
       "\n",
-      " [[3 9 7 8]\n",
-      " [5 2 6 3]\n",
-      " [5 5 3 5]]\n"
+      " [[6 2 4 5]\n",
+      " [4 4 9 8]\n",
+      " [7 3 8 5]]\n"
      ]
     }
    ],
@@ -294,9 +294,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 6 18 42 40]\n",
-      " [10 14 12 24]\n",
-      " [15 45  6 15]]\n"
+      "[[24 18 24 35]\n",
+      " [12 36 27 64]\n",
+      " [63 21 32 45]]\n"
      ]
     }
    ],
@@ -318,14 +318,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 4 2 8]\n",
-      " [8 7 2 8]\n",
-      " [6 7 2 6]\n",
-      " [6 9 6 9]]\n",
+      "[[4 1 1 9]\n",
+      " [9 8 6 7]\n",
+      " [7 6 7 1]\n",
+      " [8 8 3 7]]\n",
       "row wise sum \n",
-      " [15 25 21 30]\n",
+      " [15 30 21 26]\n",
       "Column wise sum \n",
-      " [21 27 12 31]\n"
+      " [28 23 17 24]\n"
      ]
     }
    ],
@@ -347,10 +347,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean --  5.08\n",
-      "Median --  6.0\n",
-      "Standerd Deviation --  2.4967178454923573\n",
-      "Variance --  6.233599999999999\n"
+      "Mean --  5.88\n",
+      "Median --  5.0\n",
+      "Standerd Deviation --  2.3549097647256043\n",
+      "Variance --  5.5456\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "494c319b",
    "metadata": {},
    "outputs": [
@@ -410,15 +410,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[39 56 82]\n",
-      " [ 2 58  1]\n",
-      " [42  6 52]]\n",
-      "[[40 58 85]\n",
-      " [ 3 60  4]\n",
-      " [43  8 55]]\n",
-      "[[38 54 79]\n",
-      " [ 1 56 -2]\n",
-      " [41  4 49]]\n"
+      "[[85  7 28]\n",
+      " [22 60 24]\n",
+      " [26 52 27]]\n",
+      "[[86  9 31]\n",
+      " [23 62 27]\n",
+      " [27 54 30]]\n",
+      "[[84  5 25]\n",
+      " [21 58 21]\n",
+      " [25 50 24]]\n"
      ]
     }
    ],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "bf31c8b1",
    "metadata": {},
    "outputs": [
@@ -448,13 +448,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "determinant ->  -84850.00000000013 \n",
+      "determinant ->  20182.000000000007 \n",
       "\n",
-      "Inverse --- [[-0.03547437  0.02852092  0.05539187]\n",
-      " [ 0.0007307   0.01668827 -0.00147319]\n",
-      " [ 0.02856806 -0.0249617  -0.02533883]] \n",
+      "Inverse --- [[ 0.01843227  0.06277871 -0.07491824]\n",
+      " [ 0.00148647  0.07764344 -0.07055792]\n",
+      " [-0.02061243 -0.2099891   0.24506986]] \n",
       "\n",
-      "Eigen Value  [-14.05707639 106.24284097  56.81423542] \n",
+      "Eigen Value  [112.28200619  56.5388741    3.17911972] \n",
       "\n"
      ]
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "f8020c26",
    "metadata": {},
    "outputs": [
@@ -499,15 +499,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "22282755",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 8 1 9 4]\n",
+      " [2 7 3 9 4]\n",
+      " [3 5 9 6 9]\n",
+      " [6 2 9 1 8]\n",
+      " [1 8 2 1 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  Assignment 7: Advanced Array Manipulation\n",
+    "\n",
+    "# 1. Create a NumPy array of shape (3, 3) with values from 1 to 9. Reshape the array to shape (1, 9) and then to shape (9, 1).\n",
+    "# 2. Create a NumPy array of shape (5, 5) filled with random integers. Flatten the array and then reshape it back to (5, 5).\n",
+    "a33 = np.arange(1,10).reshape(3,3)\n",
+    "reshape_1x9 = a33.reshape(1,9)\n",
+    "reshape_9x1 = a33.reshape(9,1)\n",
+    "arr_5X5 = np.random.randint(1,10,(5,5))\n",
+    "flatten = arr_5X5.flatten()\n",
+    "reshapeback = flatten.reshape(5,5)\n",
+    "print(reshapeback)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85b2ad78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bool Mask\n",
+      " [[False  True  True False False]\n",
+      " [False False False  True  True]\n",
+      " [ True  True  True  True False]\n",
+      " [ True False  True False  True]\n",
+      " [False False False False False]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assignment 8: Fancy Indexing and Boolean Indexing\n",
+    "\n",
+    "# 1. Create a NumPy array of shape (5, 5) filled with random integers. Use fancy indexing to extract the elements at the corners of the array.\n",
+    "# 2. Create a NumPy array of shape (4, 4) filled with random integers. Use boolean indexing to set all elements greater than 10 to 10.\n",
+    "a_5X5 = np.random.randint(1,10,(5,5))\n",
+    "# print(a_5X5)\n",
+    "# print(a_5X5[[0,0,-1,-1],[0,-1,0,-1]])\n",
+    "a_5X5[a_5X5>7] = 7\n",
+    "# print(\"Boolean indexing\",a_5X5)\n",
+    "boolMask = a_5X5 > 5\n",
+    "# print(\"Bool Mask\\n\",boolMask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f3d6a00",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Assignment 7: Advanced Array Manipulation\n",
+    "### Assignment 9: Structured Arrays\n",
     "\n",
-    "# 1. Create a NumPy array of shape (3, 3) with values from 1 to 9. Reshape the array to shape (1, 9) and then to shape (9, 1).\n",
-    "# 2. Create a NumPy array of shape (5, 5) filled with random integers. Flatten the array and then reshape it back to (5, 5)."
+    "# 1. Create a structured array with fields 'name' (string), 'age' (integer), and 'weight' (float). Add some data and sort the array by age.\n",
+    "# 2. Create a structured array with fields 'x' and 'y' (both integers). Add some data and compute the Euclidean distance between each pair of points.\n",
+    "\n"
    ]
   }
  ],
