Solution of Eculidean Distance

--- a/numpypandasassignments/eculidean_distance.ipynb
+++ b/numpypandasassignments/eculidean_distance.ipynb
@@ -2,58 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "id": "8edb9bce",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
+   "id": "ad64a89f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2) (6, 7) (9, 3) (5, 9)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_type = np.dtype([('x','i4'),\n",
+    "                      ('y','i4'),])\n",
+    "points = np.array([(1,2),(6,7),(9,3), (5,9)],dtype= data_type)\n",
+    "\n",
+    "print(points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "782d816d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[0., 4., 7., 8.],\n",
-       "        [4., 0., 3., 4.],\n",
-       "        [7., 3., 0., 2.],\n",
-       "        [8., 4., 2., 0.]]),\n",
-       " array([[0., 4., 7., 8.],\n",
-       "        [4., 0., 3., 4.],\n",
-       "        [7., 3., 0., 2.],\n",
-       "        [8., 4., 2., 0.]]))"
+       "array([[0.        , 7.07106781, 8.06225775, 8.06225775],\n",
+       "       [7.07106781, 0.        , 5.        , 2.23606798],\n",
+       "       [8.06225775, 5.        , 0.        , 7.21110255],\n",
+       "       [8.06225775, 2.23606798, 7.21110255, 0.        ]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataType = np.dtype([('x', 'i4'),\n",
-    "                     ('y', 'i4')])\n",
-    "\n",
-    "points = np.array([(2,4), (6,3), (9,2), (10,4)], dtype=dataType)\n",
-    "\n",
     "x_values = points['x']\n",
     "y_values = points['y']\n",
+    "\n",
+    "# 3. Use broadcasting to compute distance matrix\n",
     "\n",
     "dx = x_values[:, None] - x_values\n",
     "dy = y_values[:, None] - y_values\n",
     "\n",
     "distance = np.sqrt(dx**2 + dy**2)\n",
-    "distance = np.round(np.sqrt(dx**2 + dy**2))\n",
-    "\n",
-    "round_distance = np.round(distance, 2)\n",
-    "round_distance, distance"
+    "distance\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a5028119",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -79,5 +95,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
