Numpy Assignment 10  question 10 first mask tehe digonal element and then claculate the eamn of unmask element and then fill the mean in place of masked element

--- a/numpypandasassignments/numpyassignments.ipynb
+++ b/numpypandasassignments/numpyassignments.ipynb
@@ -87,11 +87,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2 16  9  1  8]\n",
-      " [18  4 15 11 15]\n",
-      " [12 10  4 16 16]\n",
-      " [10 16 10 13  9]\n",
-      " [10  5  9  7  6]]\n"
+      "[[ 3  3 19  3 11]\n",
+      " [ 6 13  7  4  9]\n",
+      " [11  8 19 13  8]\n",
+      " [ 2  9 11  1 20]\n",
+      " [ 8 11 18 20  8]]\n"
      ]
     }
    ],
@@ -111,11 +111,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2 16  1  1  8]\n",
-      " [18  4  1 11 15]\n",
-      " [12 10  1 16 16]\n",
-      " [10 16  1 13  9]\n",
-      " [10  5  1  7  6]]\n"
+      "[[ 3  3  1  3 11]\n",
+      " [ 6 13  1  4  9]\n",
+      " [11  8  1 13  8]\n",
+      " [ 2  9  1  1 20]\n",
+      " [ 8 11  1 20  8]]\n"
      ]
     }
    ],
@@ -132,10 +132,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[12,  1, 15, 15],\n",
-       "       [ 8,  4,  4, 10],\n",
-       "       [15,  7, 10, 13],\n",
-       "       [ 5,  1,  5, 11]])"
+       "array([[11,  5,  1,  2],\n",
+       "       [ 4, 14,  5, 15],\n",
+       "       [ 3,  3, 10, 10],\n",
+       "       [15, 10, 13, 13]])"
       ]
      },
      "execution_count": 4,
@@ -157,10 +157,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0,  1, 15, 15],\n",
-       "       [ 8,  0,  4, 10],\n",
-       "       [15,  7,  0, 13],\n",
-       "       [ 5,  1,  5,  0]])"
+       "array([[ 0,  5,  1,  2],\n",
+       "       [ 4,  0,  5, 15],\n",
+       "       [ 3,  3,  0, 10],\n",
+       "       [15, 10, 13,  0]])"
       ]
      },
      "execution_count": 5,
@@ -229,12 +229,12 @@
      "text": [
       "5, 5 array \n",
       "\n",
-      " [[57 61 61 68  3]\n",
-      " [14 89 24 79 55]\n",
-      " [31 81 87 20 11]\n",
-      " [67 57  9 65 69]\n",
-      " [69 53 78 57 39]]\n",
-      "[57 61 61 68  3 55 11 69 39 57 78 53 69 67 31 14]\n"
+      " [[64  1 87 15 94]\n",
+      " [18 98 41 57 89]\n",
+      " [43 53 16  1  7]\n",
+      " [59  2 20 68 46]\n",
+      " [83 62 92 80 15]]\n",
+      "[64  1 87 15 94 89  7 46 15 80 92 62 83 59 43 18]\n"
      ]
     }
    ],
@@ -268,13 +268,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[5 8 5 3]\n",
-      " [5 6 2 7]\n",
-      " [3 4 9 4]] \n",
+      "[[7 7 4 6]\n",
+      " [4 6 4 3]\n",
+      " [5 5 8 7]] \n",
       "\n",
-      " [[1 5 3 1]\n",
-      " [6 3 3 2]\n",
-      " [4 8 2 9]]\n"
+      " [[2 8 2 1]\n",
+      " [5 2 2 1]\n",
+      " [5 5 6 7]]\n"
      ]
     }
    ],
@@ -296,9 +296,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 5 40 15  3]\n",
-      " [30 18  6 14]\n",
-      " [12 32 18 36]]\n"
+      "[[14 56  8  6]\n",
+      " [20 12  8  3]\n",
+      " [25 25 48 49]]\n"
      ]
     }
    ],
@@ -320,14 +320,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2 9 7 8]\n",
-      " [4 1 6 9]\n",
-      " [2 6 2 5]\n",
-      " [1 4 4 4]]\n",
+      "[[4 1 3 6]\n",
+      " [8 9 5 3]\n",
+      " [5 3 1 3]\n",
+      " [3 9 8 2]]\n",
       "row wise sum \n",
-      " [26 20 15 13]\n",
+      " [14 25 12 22]\n",
       "Column wise sum \n",
-      " [ 9 20 19 26]\n"
+      " [20 22 17 14]\n"
      ]
     }
    ],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "063b7c1a",
    "metadata": {},
    "outputs": [
@@ -349,10 +349,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean --  5.12\n",
-      "Median --  5.0\n",
-      "Standerd Deviation --  2.4053274205396655\n",
-      "Variance --  5.7856000000000005\n"
+      "Mean --  4.28\n",
+      "Median --  4.0\n",
+      "Standerd Deviation --  2.8916431315084505\n",
+      "Variance --  8.3616\n"
      ]
     }
    ],
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "8303b8d9",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "12eefb6c",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "494c319b",
    "metadata": {},
    "outputs": [
@@ -412,15 +412,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1 81 76]\n",
-      " [68 46 36]\n",
-      " [52  4 64]]\n",
-      "[[ 2 83 79]\n",
-      " [69 48 39]\n",
-      " [53  6 67]]\n",
-      "[[ 0 79 73]\n",
-      " [67 44 33]\n",
-      " [51  2 61]]\n"
+      "[[36 71 34]\n",
+      " [78 15 81]\n",
+      " [28 10 44]]\n",
+      "[[37 73 37]\n",
+      " [79 17 84]\n",
+      " [29 12 47]]\n",
+      "[[35 69 31]\n",
+      " [77 13 78]\n",
+      " [27  8 41]]\n"
      ]
     }
    ],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "bf31c8b1",
    "metadata": {},
    "outputs": [
@@ -450,13 +450,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "determinant ->  -359200.0 \n",
+      "determinant ->  -75803.99999999996 \n",
       "\n",
-      "Inverse --- [[-0.0077951   0.01358575  0.0016147 ]\n",
-      " [ 0.00690423  0.01082405 -0.01428731]\n",
-      " [ 0.005902   -0.01171492  0.01520601]] \n",
+      "Inverse --- [[ 0.00197879  0.03672629 -0.06913883]\n",
+      " [ 0.01535539 -0.00833729  0.00348267]\n",
+      " [-0.00474909 -0.02147644  0.0659332 ]] \n",
       "\n",
-      "Eigen Value  [-66.95444691 139.49558374  38.45886318] \n",
+      "Eigen Value  [126.05503561 -44.55268257  13.49764697] \n",
       "\n"
      ]
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "f8020c26",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "22282755",
    "metadata": {},
    "outputs": [
@@ -509,11 +509,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4 6 5 5 3]\n",
-      " [4 8 3 6 7]\n",
-      " [5 5 5 4 8]\n",
-      " [3 4 6 9 6]\n",
-      " [5 2 2 4 1]]\n"
+      "[[4 5 4 5 3]\n",
+      " [1 2 2 1 8]\n",
+      " [6 7 8 3 5]\n",
+      " [5 1 5 3 2]\n",
+      " [7 3 7 2 4]]\n"
      ]
     }
    ],
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "85b2ad78",
    "metadata": {},
    "outputs": [],
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "4f3d6a00",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "dbdb4324",
    "metadata": {},
    "outputs": [
@@ -657,8 +657,42 @@
    "execution_count": null,
    "id": "01326bc5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "82\n",
+      "25\n",
+      "68\n",
+      "61\n",
+      "97\n",
+      "74\n",
+      "13\n",
+      "78\n",
+      "14\n",
+      "38\n",
+      "44\n",
+      "99\n",
+      "45\n",
+      "26\n",
+      "32\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Assignment 10: Masked Arrays\n",
+    "\n",
+    "# 1. Create a masked array of shape (4, 4) with random integers and mask the elements greater than 10. Compute the sum of the unmasked elements.\n",
+    "# 2. Create a masked array of shape (3, 3) with random integers and mask the diagonal elements. Replace the masked elements with the mean of the unmasked elements.\n",
+    "# Question 1\n",
+    "\n",
+    "as101 = np.random.randint(1,100, (4,4))\n",
+    "for i in as101:\n",
+    "    for j in i:\n",
+    "        print(j)"
+   ]
   },
   {
    "cell_type": "markdown",
