--- a/numpypandasassignments/numpyassignments.ipynb
+++ b/numpypandasassignments/numpyassignments.ipynb
@@ -87,11 +87,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 3  3 19  3 11]\n",
-      " [ 6 13  7  4  9]\n",
-      " [11  8 19 13  8]\n",
-      " [ 2  9 11  1 20]\n",
-      " [ 8 11 18 20  8]]\n"
+      "[[ 2 20  2  8  8]\n",
+      " [16  1 11 15  2]\n",
+      " [16  5 13 20  3]\n",
+      " [ 5 11  7 11  7]\n",
+      " [16  4  4 14 14]]\n"
      ]
     }
    ],
@@ -111,11 +111,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 3  3  1  3 11]\n",
-      " [ 6 13  1  4  9]\n",
-      " [11  8  1 13  8]\n",
-      " [ 2  9  1  1 20]\n",
-      " [ 8 11  1 20  8]]\n"
+      "[[ 2 20  1  8  8]\n",
+      " [16  1  1 15  2]\n",
+      " [16  5  1 20  3]\n",
+      " [ 5 11  1 11  7]\n",
+      " [16  4  1 14 14]]\n"
      ]
     }
    ],
@@ -132,10 +132,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[11,  5,  1,  2],\n",
-       "       [ 4, 14,  5, 15],\n",
-       "       [ 3,  3, 10, 10],\n",
-       "       [15, 10, 13, 13]])"
+       "array([[11,  1,  4, 13],\n",
+       "       [ 3,  1,  7, 15],\n",
+       "       [ 3, 10, 10,  1],\n",
+       "       [ 3,  8, 15,  2]])"
       ]
      },
      "execution_count": 4,
@@ -157,10 +157,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0,  5,  1,  2],\n",
-       "       [ 4,  0,  5, 15],\n",
-       "       [ 3,  3,  0, 10],\n",
-       "       [15, 10, 13,  0]])"
+       "array([[ 0,  1,  4, 13],\n",
+       "       [ 3,  0,  7, 15],\n",
+       "       [ 3, 10,  0,  1],\n",
+       "       [ 3,  8, 15,  0]])"
       ]
      },
      "execution_count": 5,
@@ -229,12 +229,12 @@
      "text": [
       "5, 5 array \n",
       "\n",
-      " [[64  1 87 15 94]\n",
-      " [18 98 41 57 89]\n",
-      " [43 53 16  1  7]\n",
-      " [59  2 20 68 46]\n",
-      " [83 62 92 80 15]]\n",
-      "[64  1 87 15 94 89  7 46 15 80 92 62 83 59 43 18]\n"
+      " [[83 23 85 15 98]\n",
+      " [93 93 81  3 44]\n",
+      " [92 82 95 80 82]\n",
+      " [68 60 97 48 40]\n",
+      " [85 18 83  3 22]]\n",
+      "[83 23 85 15 98 44 82 40 22  3 83 18 85 68 92 93]\n"
      ]
     }
    ],
@@ -268,13 +268,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[7 7 4 6]\n",
-      " [4 6 4 3]\n",
-      " [5 5 8 7]] \n",
+      "[[5 1 8 1]\n",
+      " [9 9 6 3]\n",
+      " [2 9 3 9]] \n",
       "\n",
-      " [[2 8 2 1]\n",
-      " [5 2 2 1]\n",
-      " [5 5 6 7]]\n"
+      " [[7 2 7 7]\n",
+      " [2 9 8 9]\n",
+      " [1 4 8 6]]\n"
      ]
     }
    ],
@@ -296,9 +296,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[14 56  8  6]\n",
-      " [20 12  8  3]\n",
-      " [25 25 48 49]]\n"
+      "[[35  2 56  7]\n",
+      " [18 81 48 27]\n",
+      " [ 2 36 24 54]]\n"
      ]
     }
    ],
@@ -320,14 +320,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4 1 3 6]\n",
-      " [8 9 5 3]\n",
-      " [5 3 1 3]\n",
-      " [3 9 8 2]]\n",
+      "[[2 7 8 3]\n",
+      " [6 2 8 3]\n",
+      " [3 5 7 5]\n",
+      " [4 3 4 9]]\n",
       "row wise sum \n",
-      " [14 25 12 22]\n",
+      " [20 19 20 20]\n",
       "Column wise sum \n",
-      " [20 22 17 14]\n"
+      " [15 17 27 20]\n"
      ]
     }
    ],
@@ -349,10 +349,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean --  4.28\n",
-      "Median --  4.0\n",
-      "Standerd Deviation --  2.8916431315084505\n",
-      "Variance --  8.3616\n"
+      "Mean --  5.88\n",
+      "Median --  6.0\n",
+      "Standerd Deviation --  2.2148589119851403\n",
+      "Variance --  4.9056\n"
      ]
     }
    ],
@@ -412,15 +412,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[36 71 34]\n",
-      " [78 15 81]\n",
-      " [28 10 44]]\n",
-      "[[37 73 37]\n",
-      " [79 17 84]\n",
-      " [29 12 47]]\n",
-      "[[35 69 31]\n",
-      " [77 13 78]\n",
-      " [27  8 41]]\n"
+      "[[21 56  3]\n",
+      " [42 73 28]\n",
+      " [59 32 62]]\n",
+      "[[22 58  6]\n",
+      " [43 75 31]\n",
+      " [60 34 65]]\n",
+      "[[20 54  0]\n",
+      " [41 71 25]\n",
+      " [58 30 59]]\n"
      ]
     }
    ],
@@ -450,13 +450,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "determinant ->  -75803.99999999996 \n",
+      "determinant ->  14028.99999999999 \n",
       "\n",
-      "Inverse --- [[ 0.00197879  0.03672629 -0.06913883]\n",
-      " [ 0.01535539 -0.00833729  0.00348267]\n",
-      " [-0.00474909 -0.02147644  0.0659332 ]] \n",
+      "Inverse --- [[ 0.25874973 -0.24064438  0.09615796]\n",
+      " [-0.06785943  0.08019103 -0.03293178]\n",
+      " [-0.21120536  0.18761138 -0.05837907]] \n",
       "\n",
-      "Eigen Value  [126.05503561 -44.55268257  13.49764697] \n",
+      "Eigen Value  [125.53684937   4.26577217  26.19737847] \n",
       "\n"
      ]
     }
@@ -509,11 +509,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4 5 4 5 3]\n",
-      " [1 2 2 1 8]\n",
-      " [6 7 8 3 5]\n",
-      " [5 1 5 3 2]\n",
-      " [7 3 7 2 4]]\n"
+      "[[4 7 1 3 8]\n",
+      " [1 1 1 2 7]\n",
+      " [5 7 2 5 5]\n",
+      " [5 8 3 8 1]\n",
+      " [7 2 5 4 2]]\n"
      ]
     }
    ],
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "01326bc5",
    "metadata": {},
    "outputs": [
@@ -662,22 +662,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "82\n",
-      "25\n",
-      "68\n",
-      "61\n",
-      "97\n",
-      "74\n",
-      "13\n",
-      "78\n",
-      "14\n",
-      "38\n",
-      "44\n",
-      "99\n",
-      "45\n",
-      "26\n",
-      "32\n",
-      "22\n"
+      "[[8 -- -- --]\n",
+      " [1 7 8 5]\n",
+      " [0 0 4 --]\n",
+      " [-- 7 1 10]] 51\n"
      ]
     }
    ],
@@ -688,16 +676,58 @@
     "# 2. Create a masked array of shape (3, 3) with random integers and mask the diagonal elements. Replace the masked elements with the mean of the unmasked elements.\n",
     "# Question 1\n",
     "\n",
-    "as101 = np.random.randint(1,100, (4,4))\n",
-    "for i in as101:\n",
-    "    for j in i:\n",
-    "        print(j)"
+    "as101 = np.random.randint(0, 20, (4, 4))\n",
+    "\n",
+    "masked_array = np.ma.masked_where(as101 > 10, as101)\n",
+    "masked_array_sum = masked_array.sum()\n",
+    "print(masked_array, masked_array_sum)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "32bbf3eb",
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6fb2e02d",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[13, 15, 18],\n",
+       "       [14, 13, 10],\n",
+       "       [18,  6, 13]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. Create a masked array of shape (3, 3) with random integers and mask the diagonal elements. Replace the masked elements with the mean of the unmasked elements.\n",
+    "a33 = np.random.randint(1,20, (3,3))\n",
+    "mask = np.eye(3, dtype=bool) \n",
+    "masked_array_dig = np.ma.masked_array(a33, mask=mask)\n",
+    "\n",
+    "mask_mean = masked_array_dig.mean()\n",
+    "print(mask_mean)\n",
+    "a33_result = masked_array_dig.filled(mask_mean)\n",
+    "a33_result\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0178ffc",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
