--- a/numpypandasassignments/pandasasssignments.ipynb
+++ b/numpypandasassignments/pandasasssignments.ipynb
@@ -59,21 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   B  C  D\n",
-      "A         \n",
-      "2  1  4  3\n",
-      "3  3  2  4\n",
-      "2  3  1  1\n",
-      "1  1  1  3\n",
-      "3  3  2  2\n",
-      "1  3  2  3\n"
+      "     B   C   D\n",
+      "A             \n",
+      "61  80  11  92\n",
+      "24  74  85  30\n",
+      "66  61  67  12\n",
+      "55  33  21  59\n",
+      "14  28  25  66\n",
+      "3   90  20  25\n"
      ]
     }
    ],
@@ -84,21 +84,110 @@
     "### Assignment 1: DataFrame Creation and Indexing\n",
     "\n",
     "# 1. Create a Pandas DataFrame with 4 columns and 6 rows filled with random integers. Set the index to be the first column.\n",
-    "# 2. Create a Pandas DataFrame with columns 'A', 'B', 'C' and index 'X', 'Y', 'Z'. Fill the DataFrame with random integers and access the element at row 'Y' and column 'B'.\n",
     "\n",
     "# Question 1\n",
     "\n",
-    "df = pd.DataFrame(np.random.randint(1,5, size=(6,4)), columns=[\"A\", \"B\", \"C\", \"D\"])\n",
+    "df = pd.DataFrame(np.random.randint(1,100, size=(6,4)), columns=[\"A\", \"B\", \"C\", \"D\"])\n",
     "\n",
     "df.set_index(\"A\", inplace=True)\n",
     "print(df)\n",
-    "# print(df.loc['2'])\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ad108783",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>X</th>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Y</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Z</th>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  C\n",
+       "X  3  9  6\n",
+       "Y  6  4  3\n",
+       "Z  7  8  7"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df.describe()\n",
+    "# 2. Create a Pandas DataFrame with columns 'A', 'B', 'C' and index 'X', 'Y', 'Z'. Fill the DataFrame with random integers and access the element at row 'Y' and column 'B'.\n",
+    "\n",
+    "df3 = pd.DataFrame(np.random.randint(1,10, size=(3,3)), columns=['A', 'B', 'C'], index=['X', 'Y', 'Z'])\n",
+    "df3\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad108783",
+   "id": "292edd27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Assignment 2: DataFrame Operations\n",
+    "\n",
+    "# 1. Create a Pandas DataFrame with 3 columns and 5 rows filled with random integers. Add a new column that is the product of the first two columns.\n",
+    "\n",
+    "\n",
+    "# 2. Create a Pandas DataFrame with 3 columns and 4 rows filled with random integers. Compute the row-wise and column-wise sum."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "744848e5",
    "metadata": {},
    "outputs": [],
    "source": []
