Pandas Data Cleanining Question

--- a/numpypandasassignments/pandasasssignments.ipynb
+++ b/numpypandasassignments/pandasasssignments.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -68,12 +68,12 @@
      "text": [
       "     B   C   D\n",
       "A             \n",
-      "61  80  11  92\n",
-      "24  74  85  30\n",
-      "66  61  67  12\n",
-      "55  33  21  59\n",
-      "14  28  25  66\n",
-      "3   90  20  25\n"
+      "54  74  71  20\n",
+      "76  39  38  21\n",
+      "6   75  95  83\n",
+      "24  44  79  21\n",
+      "5   37  44  33\n",
+      "73  35  79  27\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "ad108783",
    "metadata": {},
    "outputs": [
@@ -130,20 +130,20 @@
        "    <tr>\n",
        "      <th>X</th>\n",
        "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Y</th>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Z</th>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "      <td>8</td>\n",
-       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -151,12 +151,12 @@
       ],
       "text/plain": [
        "   A  B  C\n",
-       "X  3  9  6\n",
-       "Y  6  4  3\n",
-       "Z  7  8  7"
+       "X  3  5  8\n",
+       "Y  8  3  3\n",
+       "Z  1  5  8"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,23 +171,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "292edd27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  C   D\n",
+       "0  3  2  6   6\n",
+       "1  1  2  9   2\n",
+       "2  5  4  6  20\n",
+       "3  2  1  5   2\n",
+       "4  3  4  9  12"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### Assignment 2: DataFrame Operations\n",
     "\n",
     "# 1. Create a Pandas DataFrame with 3 columns and 5 rows filled with random integers. Add a new column that is the product of the first two columns.\n",
-    "\n",
-    "\n",
-    "# 2. Create a Pandas DataFrame with 3 columns and 4 rows filled with random integers. Compute the row-wise and column-wise sum."
+    "df35 = pd.DataFrame(np.random.randint(1,10, size=(5,3)), columns=list('ABC'))\n",
+    "df35['D'] = df35['A']* df35['B']\n",
+    "df35\n",
+    "# 2. Create a Pandas DataFrame with 3 columns and 4 rows filled with random integers. Compute the row-wise and column-wise sum.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "744848e5",
+   "id": "d978deeb",
    "metadata": {},
    "outputs": [],
    "source": []
