--- a/numpypandasassignments/pandasasssignments.ipynb
+++ b/numpypandasassignments/pandasasssignments.ipynb
@@ -68,12 +68,12 @@
      "text": [
       "     B   C   D\n",
       "A             \n",
-      "54  74  71  20\n",
-      "76  39  38  21\n",
-      "6   75  95  83\n",
-      "24  44  79  21\n",
-      "5   37  44  33\n",
-      "73  35  79  27\n"
+      "84  98  28  34\n",
+      "44  77  83  10\n",
+      "86  56  28  27\n",
+      "70  96  22  89\n",
+      "31   9  57  82\n",
+      "15   4  66   6\n"
      ]
     }
    ],
@@ -136,14 +136,14 @@
        "    <tr>\n",
        "      <th>Y</th>\n",
        "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Z</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -152,8 +152,8 @@
       "text/plain": [
        "   A  B  C\n",
        "X  3  5  8\n",
-       "Y  8  3  3\n",
-       "Z  1  5  8"
+       "Y  8  2  6\n",
+       "Z  6  6  4"
       ]
      },
      "execution_count": 2,
@@ -171,8 +171,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "292edd27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C\n",
+      "0  14  18   8\n",
+      "1   9   8  12\n",
+      "2   3   6  18\n",
+      "3   7  16   9 \n",
+      "\n",
+      "Column Sum \n",
+      " A    33\n",
+      "B    48\n",
+      "C    47\n",
+      "dtype: int64 Row Sum \n",
+      " 0    40\n",
+      "1    29\n",
+      "2    27\n",
+      "3    32\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Assignment 2: DataFrame Operations\n",
+    "\n",
+    "# 1. Create a Pandas DataFrame with 3 columns and 5 rows filled with random integers. Add a new column that is the product of the first two columns.\n",
+    "df35 = pd.DataFrame(np.random.randint(1,10, size=(5,3)), columns=list('ABC'))\n",
+    "df35['D'] = df35['A']* df35['B']\n",
+    "# df35\n",
+    "# 2. Create a Pandas DataFrame with 3 columns and 4 rows filled with random integers. Compute the row-wise and column-wise sum.\n",
+    "df43 = pd.DataFrame(np.random.randint(1,20, size=(4,3)), columns=list('ABC'))\n",
+    "print(df43, '\\n')\n",
+    "print('Column Sum \\n', df43.sum(axis=0), 'Row Sum \\n', df43.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d978deeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      A     B     C\n",
+      "0  73.0   NaN  98.0\n",
+      "1  96.0  39.0  84.0\n",
+      "2  87.0   NaN   NaN\n",
+      "3   NaN  35.0  12.0\n",
+      "4   7.0  32.0  75.0\n",
+      "A    65.750000\n",
+      "B    35.333333\n",
+      "C    67.250000\n",
+      "dtype: float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>73.00</td>\n",
+       "      <td>35.333333</td>\n",
+       "      <td>98.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>96.00</td>\n",
+       "      <td>39.000000</td>\n",
+       "      <td>84.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>87.00</td>\n",
+       "      <td>35.333333</td>\n",
+       "      <td>67.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>65.75</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>12.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7.00</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>75.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       A          B      C\n",
+       "0  73.00  35.333333  98.00\n",
+       "1  96.00  39.000000  84.00\n",
+       "2  87.00  35.333333  67.25\n",
+       "3  65.75  35.000000  12.00\n",
+       "4   7.00  32.000000  75.00"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Assignment 3: Data Cleaning\n",
+    "\n",
+    "# 1. Create a Pandas DataFrame with 3 columns and 5 rows filled with random integers. Introduce some NaN values. Fill the NaN values with the mean of the respective columns.\n",
+    "a3q1 = pd.DataFrame(np.random.randint(1,100, size=(5,3)), columns=list('ABC'))\n",
+    "a3q1.iloc[0,1] = np.nan\n",
+    "a3q1.iloc[2,1] = np.nan\n",
+    "a3q1.iloc[3,0] = np.nan\n",
+    "a3q1.iloc[2,2] = np.nan\n",
+    "# print(a3q1)\n",
+    "# print(a3q1.mean())\n",
+    "# a3q1.iloc[0,1] = a3q1.mean()['B']\n",
+    "# a3q1.iloc[3,0] = a3q1.mean()['A']\n",
+    "# a3q1.iloc[2,2] = a3q1.mean()['C']\n",
+    "# print(a3q1)\n",
+    "print(a3q1)\n",
+    "print(a3q1.mean())\n",
+    "a3q1.fillna(a3q1.mean(), inplace=True)\n",
+    "a3q1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bb925376",
    "metadata": {},
    "outputs": [
     {
@@ -205,74 +365,189 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
+       "      <td>76</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>35.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>9</td>\n",
-       "      <td>12</td>\n",
+       "      <th>5</th>\n",
+       "      <td>26</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>72.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   A  B  C   D\n",
-       "0  3  2  6   6\n",
-       "1  1  2  9   2\n",
-       "2  5  4  6  20\n",
-       "3  2  1  5   2\n",
-       "4  3  4  9  12"
+       "    A     B     C     D\n",
+       "0  76  56.0  56.0  35.0\n",
+       "5  26  22.0  91.0  72.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### Assignment 2: DataFrame Operations\n",
+    "# 2. Create a Pandas DataFrame with 4 columns and 6 rows filled with random integers. Introduce some NaN values. Drop the rows with any NaN values.\n",
+    "a3q2 = pd.DataFrame(np.random.randint(1,100, size=(6,4)), columns=list('ABCD'))\n",
+    "a3q2.iloc[1,1] = np.nan\n",
+    "a3q2.iloc[2,2] = np.nan\n",
+    "a3q2.iloc[3,3] = np.nan\n",
+    "a3q2.iloc[4,2] = np.nan\n",
+    "a3q2.dropna(inplace=True)\n",
+    "a3q2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "61c5b54d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ankur</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sunny</td>\n",
+       "      <td>29</td>\n",
+       "      <td>30000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Vivek</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Matroo</td>\n",
+       "      <td>55</td>\n",
+       "      <td>55000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kanchan</td>\n",
+       "      <td>53</td>\n",
+       "      <td>1000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name  Age   Salary\n",
+       "0    Ankur   25        0\n",
+       "1    Sunny   29    30000\n",
+       "2    Vivek   32    32400\n",
+       "3   Matroo   55    55000\n",
+       "4  Kanchan   53  1000000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Assignment 5: Merging DataFrames\n",
     "\n",
-    "# 1. Create a Pandas DataFrame with 3 columns and 5 rows filled with random integers. Add a new column that is the product of the first two columns.\n",
-    "df35 = pd.DataFrame(np.random.randint(1,10, size=(5,3)), columns=list('ABC'))\n",
-    "df35['D'] = df35['A']* df35['B']\n",
-    "df35\n",
-    "# 2. Create a Pandas DataFrame with 3 columns and 4 rows filled with random integers. Compute the row-wise and column-wise sum.\n"
+    "# 1. Create two Pandas DataFrames with a common column. Merge the DataFrames using the common column.\n",
+    "a5q1 = pd.DataFrame({\"Name\":[\"Ankur\", \"Sunny\", \"Vivek\", \"Matroo\", \"Kanchan\"], \"Age\":[25, 29, 32, 55, 53]})\n",
+    "a5q1_2 = pd.DataFrame({\"Name\":[\"Ankur\", \"Sunny\", \"Vivek\", \"Matroo\", \"Kanchan\"], \"Salary\":[0, 30000, 32400, 55000, 1000000]})\n",
+    "pd.merge(a5q1,a5q1_2,on='Name')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "15f8dff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Family  weight      abc       chsu\n",
+      "0    Ankur    60.0      NaN        NaN\n",
+      "1    Sunny    70.0      NaN        NaN\n",
+      "2    Vivek    20.0      NaN        NaN\n",
+      "3   Matroo    40.0      NaN        NaN\n",
+      "4  Kanchan    70.0      NaN        NaN\n",
+      "5   Aayusi    80.0      NaN        NaN\n",
+      "0      NaN     NaN      bsf       cscs\n",
+      "1      NaN     NaN     njsa       dhsi\n",
+      "2      NaN     NaN     jdsh    csdcies\n",
+      "3      NaN     NaN  xkjdwhi      skjac\n",
+      "4      NaN     NaN     cdic     dsagca\n",
+      "5      NaN     NaN   jdsaha  cnsajciau \n",
+      "\n",
+      "    Family  weight      abc       chsu\n",
+      "0    Ankur      60      bsf       cscs\n",
+      "1    Sunny      70     njsa       dhsi\n",
+      "2    Vivek      20     jdsh    csdcies\n",
+      "3   Matroo      40  xkjdwhi      skjac\n",
+      "4  Kanchan      70     cdic     dsagca\n",
+      "5   Aayusi      80   jdsaha  cnsajciau\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Create two Pandas DataFrames with different columns. Concatenate the DataFrames along the rows and along the columns\n",
+    "a5q2_a = pd.DataFrame({\"Family\":[\"Ankur\", \"Sunny\", \"Vivek\", \"Matroo\", \"Kanchan\", \"Aayusi\"],'weight':[60,70,20,40,70,80]})\n",
+    "a5q2_b = pd.DataFrame({\"abc\":[\"bsf\", \"njsa\", \"jdsh\", \"xkjdwhi\", \"cdic\", \"jdsaha\"],'chsu':['cscs','dhsi','csdcies','skjac','dsagca','cnsajciau']})\n",
+    "print(pd.concat([a5q2_a, a5q2_b], axis=0),'\\n')\n",
+    "print(pd.concat([a5q2_a, a5q2_b], axis=1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d978deeb",
+   "id": "54df67b3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Assignment 6: Time Series Analysis\n",
+    "\n",
+    "# 1. Create a Pandas DataFrame with a datetime index and one column filled with random integers. Resample the DataFrame to compute the monthly mean of the values.\n",
+    "# 2. Create a Pandas DataFrame with a datetime index ranging from '2021-01-01' to '2021-12-31' and one column filled with random integers. Compute the rolling mean with a window of 7 days.\n"
+   ]
   }
  ],
  "metadata": {
