Time Series Analysis assignment 1

--- a/numpypandasassignments/pandasasssignments.ipynb
+++ b/numpypandasassignments/pandasasssignments.ipynb
@@ -68,12 +68,12 @@
      "text": [
       "     B   C   D\n",
       "A             \n",
-      "84  98  28  34\n",
-      "44  77  83  10\n",
-      "86  56  28  27\n",
-      "70  96  22  89\n",
-      "31   9  57  82\n",
-      "15   4  66   6\n"
+      "52  68  41  57\n",
+      "81  83   1  62\n",
+      "59  77  89  27\n",
+      "18   5  74  67\n",
+      "90  11  22  82\n",
+      "50  70  86  87\n"
      ]
     }
    ],
@@ -129,21 +129,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>X</th>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
+       "      <td>9</td>\n",
        "      <td>8</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Y</th>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Z</th>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -151,9 +151,9 @@
       ],
       "text/plain": [
        "   A  B  C\n",
-       "X  3  5  8\n",
-       "Y  8  2  6\n",
-       "Z  6  6  4"
+       "X  9  8  9\n",
+       "Y  4  7  6\n",
+       "Z  9  9  2"
       ]
      },
      "execution_count": 2,
@@ -180,20 +180,20 @@
      "output_type": "stream",
      "text": [
       "    A   B   C\n",
-      "0  14  18   8\n",
-      "1   9   8  12\n",
-      "2   3   6  18\n",
-      "3   7  16   9 \n",
+      "0   7  16   5\n",
+      "1  12  10  13\n",
+      "2   9   9   6\n",
+      "3  13  18   8 \n",
       "\n",
       "Column Sum \n",
-      " A    33\n",
-      "B    48\n",
-      "C    47\n",
+      " A    41\n",
+      "B    53\n",
+      "C    32\n",
       "dtype: int64 Row Sum \n",
-      " 0    40\n",
-      "1    29\n",
-      "2    27\n",
-      "3    32\n",
+      " 0    28\n",
+      "1    35\n",
+      "2    24\n",
+      "3    39\n",
       "dtype: int64\n"
      ]
     }
@@ -222,14 +222,14 @@
      "output_type": "stream",
      "text": [
       "      A     B     C\n",
-      "0  73.0   NaN  98.0\n",
-      "1  96.0  39.0  84.0\n",
-      "2  87.0   NaN   NaN\n",
-      "3   NaN  35.0  12.0\n",
-      "4   7.0  32.0  75.0\n",
-      "A    65.750000\n",
-      "B    35.333333\n",
-      "C    67.250000\n",
+      "0  31.0   NaN  17.0\n",
+      "1  12.0  82.0  95.0\n",
+      "2  30.0   NaN   NaN\n",
+      "3   NaN   4.0   7.0\n",
+      "4  51.0  11.0  58.0\n",
+      "A    31.000000\n",
+      "B    32.333333\n",
+      "C    44.250000\n",
       "dtype: float64\n"
      ]
     },
@@ -262,45 +262,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>73.00</td>\n",
-       "      <td>35.333333</td>\n",
-       "      <td>98.00</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>32.333333</td>\n",
+       "      <td>17.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>96.00</td>\n",
-       "      <td>39.000000</td>\n",
-       "      <td>84.00</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>82.000000</td>\n",
+       "      <td>95.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>87.00</td>\n",
-       "      <td>35.333333</td>\n",
-       "      <td>67.25</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>32.333333</td>\n",
+       "      <td>44.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>65.75</td>\n",
-       "      <td>35.000000</td>\n",
-       "      <td>12.00</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>7.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7.00</td>\n",
-       "      <td>32.000000</td>\n",
-       "      <td>75.00</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>58.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       A          B      C\n",
-       "0  73.00  35.333333  98.00\n",
-       "1  96.00  39.000000  84.00\n",
-       "2  87.00  35.333333  67.25\n",
-       "3  65.75  35.000000  12.00\n",
-       "4   7.00  32.000000  75.00"
+       "      A          B      C\n",
+       "0  31.0  32.333333  17.00\n",
+       "1  12.0  82.000000  95.00\n",
+       "2  30.0  32.333333  44.25\n",
+       "3  31.0   4.000000   7.00\n",
+       "4  51.0  11.000000  58.00"
       ]
      },
      "execution_count": 4,
@@ -365,17 +365,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>76</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>35.0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>64.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>26</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>72.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>58.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -383,8 +383,8 @@
       ],
       "text/plain": [
        "    A     B     C     D\n",
-       "0  76  56.0  56.0  35.0\n",
-       "5  26  22.0  91.0  72.0"
+       "0  41  53.0  16.0  64.0\n",
+       "5   7  42.0  29.0  58.0"
       ]
      },
      "execution_count": 5,
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "61c5b54d",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "4  Kanchan   53  1000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "15f8dff7",
    "metadata": {},
    "outputs": [
@@ -541,11 +541,51 @@
    "execution_count": null,
    "id": "54df67b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          date  numbers\n",
+      "0   2025-07-14 08:53:45.954695       31\n",
+      "1   2025-07-15 08:53:45.954695       10\n",
+      "2   2025-07-16 08:53:45.954695       32\n",
+      "3   2025-07-17 08:53:45.954695       97\n",
+      "4   2025-07-18 08:53:45.954695       28\n",
+      "..                         ...      ...\n",
+      "396 2026-08-14 08:53:45.954695       85\n",
+      "397 2026-08-15 08:53:45.954695       27\n",
+      "398 2026-08-16 08:53:45.954695       27\n",
+      "399 2026-08-17 08:53:45.954695       36\n",
+      "400 2026-08-18 08:53:45.954695       55\n",
+      "\n",
+      "[401 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "### Assignment 6: Time Series Analysis\n",
     "\n",
     "# 1. Create a Pandas DataFrame with a datetime index and one column filled with random integers. Resample the DataFrame to compute the monthly mean of the values.\n",
+    "from datetime import datetime, timedelta\n",
+    "date_today = datetime.now()\n",
+    "days = pd.date_range(date_today,date_today + timedelta(400),freq='D')\n",
+    "df = pd.DataFrame(days, columns=['date'])\n",
+    "df['numbers'] = np.random.randint(1,100, size=(len(days)))\n",
+    "# df.set_index('date', inplace=True)\n",
+    "# print(df)\n",
+    "# monthely_mean = df.resample('M').mean()\n",
+    "# print(monthely_mean)\n",
+    "df['year_month'] = df['date'].dt.to_period('M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c058d3eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 2. Create a Pandas DataFrame with a datetime index ranging from '2021-01-01' to '2021-12-31' and one column filled with random integers. Compute the rolling mean with a window of 7 days.\n"
    ]
   }
