Time Series Analysis Rolling Assignment

--- a/numpypandasassignments/pandasasssignments.ipynb
+++ b/numpypandasassignments/pandasasssignments.ipynb
@@ -538,29 +538,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "54df67b3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                          date  numbers\n",
-      "0   2025-07-14 08:53:45.954695       31\n",
-      "1   2025-07-15 08:53:45.954695       10\n",
-      "2   2025-07-16 08:53:45.954695       32\n",
-      "3   2025-07-17 08:53:45.954695       97\n",
-      "4   2025-07-18 08:53:45.954695       28\n",
-      "..                         ...      ...\n",
-      "396 2026-08-14 08:53:45.954695       85\n",
-      "397 2026-08-15 08:53:45.954695       27\n",
-      "398 2026-08-16 08:53:45.954695       27\n",
-      "399 2026-08-17 08:53:45.954695       36\n",
-      "400 2026-08-18 08:53:45.954695       55\n",
-      "\n",
-      "[401 rows x 2 columns]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "date\n",
+       "2025-07-14 09:00:17.999974    74.0\n",
+       "2025-07-15 09:00:17.999974    49.0\n",
+       "2025-07-16 09:00:17.999974    80.0\n",
+       "2025-07-17 09:00:17.999974    37.0\n",
+       "2025-07-18 09:00:17.999974    65.0\n",
+       "                              ... \n",
+       "2026-08-14 09:00:17.999974    77.0\n",
+       "2026-08-15 09:00:17.999974    21.0\n",
+       "2026-08-16 09:00:17.999974    70.0\n",
+       "2026-08-17 09:00:17.999974    22.0\n",
+       "2026-08-18 09:00:17.999974    80.0\n",
+       "Name: numbers, Length: 401, dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -576,18 +578,59 @@
     "# print(df)\n",
     "# monthely_mean = df.resample('M').mean()\n",
     "# print(monthely_mean)\n",
-    "df['year_month'] = df['date'].dt.to_period('M')"
+    "# df['year_month'] = df['date'].dt.to_period('M')\n",
+    "monthely_mean = df.groupby('date')['numbers'].mean()\n",
+    "monthely_mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "c058d3eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "2021-01-01     NaN\n",
+       "2021-01-02     NaN\n",
+       "2021-01-03     NaN\n",
+       "2021-01-04     NaN\n",
+       "2021-01-05     NaN\n",
+       "              ... \n",
+       "2021-12-27    81.0\n",
+       "2021-12-28    81.0\n",
+       "2021-12-29    81.0\n",
+       "2021-12-30    84.0\n",
+       "2021-12-31    84.0\n",
+       "Name: numbers, Length: 365, dtype: float64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 2. Create a Pandas DataFrame with a datetime index ranging from '2021-01-01' to '2021-12-31' and one column filled with random integers. Compute the rolling mean with a window of 7 days.\n"
+    "# 2. Create a Pandas DataFrame with a datetime index ranging from '2021-01-01' to '2021-12-31' and one column filled with random integers. Compute the rolling mean with a window of 7 days.\n",
+    "\n",
+    "time_today_1 = datetime.today()\n",
+    "timerange = pd.date_range('2021-01-01', '2021-12-31')\n",
+    "df_1 = pd.DataFrame(timerange, columns=['date'])\n",
+    "df_1['numbers'] = np.random.randint(1,100, size=(len(timerange)))\n",
+    "df_1.set_index('date', inplace=True)\n",
+    "roaling_mean = df_1['numbers'].rolling(window=7).max()\n",
+    "roaling_mean"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f60ebd16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
